--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
         <script src="socket.io.js"></script>
     </head>
     <body>
-        <div id="divchat">
+        <div id="div-chat">
             <p>Online user:</p>
-            <ul id="uluser">
+            <ul id="ulUser">
             </ul>
-            <h3 id="mypeer">Your Id: </h3>
+            <h3 id="my-peer">Your Id: </h3>
             <video id="localStream" width="300" controls></video>
             <br /><br />
             <video id="remoteStream" width="300" controls></video>
             <br /><br />
-            <input type="text" id="remoteid" placeholder="Remote ID" />
-            <button id="btcall">Call</button>
-            <br /><br />
+            <input type="text" id="remoteId" placeholder="Remote ID">
+            <button id="btnCall">Call</button>
         </div>
-        <div id="divdangky">
-            <input type="text" id="txtusername" placeholder="Enter your username" />
-            <button id="btsignup">Sign Up</button>
+        <div id="div-dang-ky">
+            <br /><br />
+            <input type="text" id="txtUsername" placeholder="Enter your username">
+            <button id="btnSignUp">Sign Up</button>
         </div>
     </body>
     <script src="main.js"></script>
