--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Khoa Pham WebRTC</title>
+        <title>Demo WebRTC</title>
         <script src="jquery.js"></script>
         <script src="peer.js"></script>
         <script src="socket.io.js"></script>
     </head>
     <body>
-        <div id="div-chat">
+        <div id="divchat">
             <p>Online user:</p>
-            <ul id="ulUser">
+            <ul id="uluser">
             </ul>
-            <h3 id="my-peer">Your Id: </h3>
+            <h3 id="mypeer">Your Id: </h3>
             <video id="localStream" width="300" controls></video>
             <br /><br />
             <video id="remoteStream" width="300" controls></video>
             <br /><br />
-            <input type="text" id="remoteId" placeholder="Remote ID">
-            <button id="btnCall">Call</button>
-        </div>
-        <div id="div-dang-ky">
+            <input type="text" id="remoteid" placeholder="Remote ID" />
+            <button id="btcall">Call</button>
             <br /><br />
-            <input type="text" id="txtUsername" placeholder="Enter your username">
-            <button id="btnSignUp">Sign Up</button>
+        </div>
+        <div id="divdangky">
+            <input type="text" id="txtusername" placeholder="Enter your username" />
+            <button id="btsignup">Sign Up</button>
         </div>
     </body>
     <script src="main.js"></script>
